# LOCAL-Intelligence

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  install.ps1  install.sh  pyproject.toml
gemma_cli/: __init__.py  agent.py  clipboard.py  config.py  main.py  render.py  sessions.py  statusline.py  sysprompt.py
gemma_cli/tools/: __init__.py  definitions.py  executor.py  file_tools.py  memory_tools.py  plan_tools.py  shell_tools.py  web_tools.py
tests/: test_config_sessions.py  test_statusline_cancel.py  test_tools.py
